新增切换城市和手动更新天气的功能

--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -24,4 +24,13 @@
         android:textColor="#fff"
         android:text="2017-11-03"/>
 
+    <Button
+        android:id="@+id/nav_button"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="10dp"
+        android:background="@drawable/ic_home"/>
+
 </RelativeLayout>
